# ai-workflows

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pricing.yaml  pyproject.toml  tiers.yaml
.claude/agents/: architect.md  auditor.md  builder.md  dependency-auditor.md  roadmap-selector.md  security-reviewer.md  sr-dev.md  sr-sdet.md  task-analyzer.md
.claude/commands/: audit-skills.md  audit.md  auto-implement.md  autopilot.md  clean-implement.md  clean-tasks.md  implement.md  queue-pick.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
agent_docs/: long_running_pattern.md
ai_workflows/: __init__.py  cli.py
ai_workflows/components/: __init__.py
ai_workflows/evals/: __init__.py  _capture_cli.py  _compare.py  _stub_adapter.py  capture_callback.py  runner.py  schemas.py  storage.py
ai_workflows/graph/: __init__.py  audit_cascade.py  checkpointer.py  cost_callback.py  error_handler.py  human_gate.py  ollama_fallback_gate.py  retrying_edge.py  tiered_node.py  validator_node.py
ai_workflows/mcp/: __init__.py  __main__.py  schemas.py  server.py
ai_workflows/primitives/: __init__.py  circuit_breaker.py  cost.py  logging.py  retry.py  storage.py  tiers.py  workflow_hash.py
ai_workflows/workflows/: __init__.py  _compiler.py  _dispatch.py  _scaffold_validator.py  _scaffold_write_safety.py  loader.py  planner.py  scaffold_workflow.py  scaffold_workflow_prompt.py  slice_refactor.py  spec.py  summarize.py  summarize_tiers.py  testing.py
design_docs/: architecture.md  grill_me_results.md  issues.md  nice_to_have.md  roadmap.md  search_analysis.md  worflow_initial_design.md
design_docs/adr/: 0001_workflow_hash.md  0002_bare_typed_response_format_schemas.md  0004_tiered_audit_cascade.md  0005_fastmcp_http_middleware_accessor.md  0006_tier_fallback_cascade_semantics.md  0007_user_owned_code_contract.md  0008_declarative_authoring_surface.md  0009_framework_owns_policy.md  0010_user_owned_generated_code.md
design_docs/analysis/: autonomy_model_dispatch_study.md  langgraph_mcp_pivot.md  post_0.1.2_audit_disposition.md  server_side_compaction_evaluation.md
docs/: architecture.md  tiers.example.yaml  writing-a-component.md  writing-a-custom-step.md  writing-a-graph-primitive.md  writing-a-workflow.md
evals/: README.md
migrations/: 001_initial.rollback.sql  001_initial.sql  002_reconciliation.rollback.sql  002_reconciliation.sql  003_artifacts.rollback.sql  003_artifacts.sql
runs/: .gitkeep
scripts/: aiw-entrypoint.sh  m1_smoke.py  release_smoke.sh
scripts/audit/: md_discoverability.py  skills_efficiency.py
scripts/orchestration/: auditor_rotation.py  cache_verify.py  cargo_cult_detector.py  check_task_response_fields.py  run_t06_study.py  telemetry.py
scripts/spikes/: claude_code_poc.py
template/: CLAUDE.md.template  README.md  SETUP.md
template/.claude/: settings.local.json.example
template/infrastructure/: .dockerignore  Dockerfile  Makefile  docker-compose.yml  sandbox-entrypoint.sh
tests/: conftest.py  test_cli.py  test_dotenv_autoload.py  test_kdr_014_no_quality_fields_on_input_models.py  test_main_branch_shape.py  test_scaffolding.py  test_t13_triage.py  test_t14_check.py  test_t15_ship.py  test_t16_sweep.py  test_t17_spec_format.py  test_t18_parallel_dispatch.py  test_t19_closeout.py  test_t24_md_discoverability.py  test_t25_skills_efficiency.py  test_version_dunder.py  test_wheel_contents.py
tests/agents/: __init__.py  _helpers.py  test_auditor_anti_cargo_cult.py  test_orchestrator_parser.py  test_return_schema_compliance.py
tests/cli/: conftest.py  test_eval_commands.py  test_external_workflow.py  test_list_runs.py  test_list_tiers.py  test_resume.py  test_run.py  test_run_scaffold_alias.py  test_tier_override.py
tests/docs/: test_docs_links.py  test_readme_shape.py  test_writing_custom_step_snippets.py  test_writing_workflow_snippets.py
tests/e2e/: conftest.py  test_ollama_outage_smoke.py  test_planner_smoke.py  test_slice_refactor_smoke.py  test_tier_override_smoke.py
tests/evals/: test_capture_callback.py  test_cascade_fixture_convention.py  test_compare.py  test_layer_contract.py  test_runner_deterministic.py  test_runner_live.py  test_schemas.py  test_seed_fixtures_deterministic.py  test_storage.py
tests/graph/: test_audit_cascade.py  test_auditor_tier_override.py  test_checkpointer.py  test_cost_callback.py  test_error_handler.py  test_human_gate.py  test_ollama_fallback_gate.py  test_retrying_edge.py  test_smoke_graph.py  test_tiered_node.py  test_tiered_node_fallback.py  test_tiered_node_ollama_breaker.py  test_validator_node.py
tests/integration/: test_spec_api_e2e.py
tests/mcp/: conftest.py  test_aborted_status_roundtrip.py  test_cancel_run.py  test_cancel_run_inflight.py  test_entrypoint.py  test_external_workflow.py  test_gate_pause_projection.py  test_http_fallback_on_circuit_open.py  test_http_transport.py  test_list_runs.py  test_resume_run.py  test_run_audit_cascade.py  test_run_audit_cascade_e2e.py  test_run_workflow.py  test_scaffold.py  test_scaffold_workflow_http.py  test_server_smoke.py  test_tier_override.py
tests/orchestration/: test_run_t06_harness.py
tests/orchestrator/: __init__.py  _helpers.py  bench_terminal_gate.py  test_auditor_rotation_doesnt_break_verdict.py  test_auditor_rotation_trigger.py  test_auto_clean_stamp_safety.py  test_cache_breakpoint_verification.py  test_cross_task_context_constant.py  test_cycle_context_constant.py  test_cycle_summary_emission.py  test_effort_table_consistency.py  test_gate_output_capture.py  test_integrity_checks.py  test_iter_shipped_emission.py  test_kdr_section_extractor.py  test_no_deprecated_thinking_directives.py  test_parallel_terminal_gate.py  test_spawn_prompt_size.py  test_stable_prefix_construction.py  test_telemetry_aggregation.py  test_telemetry_record.py
tests/primitives/: test_audit_feedback_template.py  test_caching.py  test_circuit_breaker.py  test_cost.py  test_cost_by_role.py  test_logging.py  test_model_factory.py  test_retry.py  test_storage.py  (+5 more)
(+545 files in other folders)
