[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-workflows"
version = "0.1.0"
description = "Composable AI workflow framework built on LangGraph + MCP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.2",
  "langgraph-checkpoint-sqlite>=1.0",
  "litellm>=1.40",
  "fastmcp>=0.2",
  "httpx>=0.27",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "structlog>=24.0",
  "typer>=0.12",
  "yoyo-migrations>=9.0",
]

[dependency-groups]
# Dev tooling — installed via `uv sync` by default but not shipped with the
# wheel. import-linter enforces the 4-layer architecture; ruff is the linter;
# pytest + pytest-asyncio drive the test suite.
dev = [
  "import-linter>=2.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "python-dotenv>=1.0",
  "ruff>=0.5",
]

[project.scripts]
aiw = "ai_workflows.cli:app"
aiw-mcp = "ai_workflows.mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["ai_workflows"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "e2e: end-to-end test that hits a real API; only runs when AIW_E2E=1",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Spike artefacts are throwaway design-validation code. They live under
# scripts/spikes/ and are deleted with their task's findings (see M1
# Task 13). Excluding them from lint keeps stylistic debt from bleeding
# into ruff output for a file we plan to remove.
extend-exclude = ["scripts/spikes"]

[tool.ruff.lint]
# Sensible default rule set; tighten as the codebase grows.
select = ["E", "F", "I", "UP", "B", "SIM"]

# ``typer.Option`` / ``typer.Argument`` are the idiomatic way to declare
# CLI parameters in Typer. They look like mutable-default function calls
# to B008 but are evaluated once at import time and treated as markers,
# so they're safe. Same rationale applies to ``typer.Context``.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.importlinter]
root_package = "ai_workflows"

# Four-layer contract per architecture.md §3:
#   primitives → graph → workflows → surfaces (cli, mcp).
# Lower layers must never reach upward. M1 Task 12 replaces the
# pre-pivot 3-layer contracts (primitives / components / workflows)
# with this set; the old ``components/`` layer is collapsed into
# ``graph/``.

[[tool.importlinter.contracts]]
name = "primitives cannot import graph, workflows, or surfaces"
type = "forbidden"
source_modules = ["ai_workflows.primitives"]
forbidden_modules = [
    "ai_workflows.graph",
    "ai_workflows.workflows",
    "ai_workflows.cli",
    "ai_workflows.mcp",
]

[[tool.importlinter.contracts]]
name = "graph cannot import workflows or surfaces"
type = "forbidden"
source_modules = ["ai_workflows.graph"]
forbidden_modules = [
    "ai_workflows.workflows",
    "ai_workflows.cli",
    "ai_workflows.mcp",
]

[[tool.importlinter.contracts]]
name = "workflows cannot import surfaces"
type = "forbidden"
source_modules = ["ai_workflows.workflows"]
forbidden_modules = ["ai_workflows.cli", "ai_workflows.mcp"]
