[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jmdl-ai-workflows"
version = "0.1.1"
description = "Composable AI workflow framework built on LangGraph + MCP."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Jose de Lima", email = "delimajm@gmail.com"}]
keywords = ["langgraph", "mcp", "claude-code", "ai-workflow", "litellm", "ollama"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "langgraph>=0.2",
  "langgraph-checkpoint-sqlite>=1.0",
  "litellm>=1.40",
  "fastmcp>=0.2",
  "httpx>=0.27",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "structlog>=24.0",
  "typer>=0.12",
  "yoyo-migrations>=9.0",
]

[project.urls]
Homepage = "https://github.com/yeevon/ai-workflows"
Repository = "https://github.com/yeevon/ai-workflows"
Issues = "https://github.com/yeevon/ai-workflows/issues"

[dependency-groups]
# Dev tooling — installed via `uv sync` by default but not shipped with the
# wheel. import-linter enforces the 4-layer architecture; ruff is the linter;
# pytest + pytest-asyncio drive the test suite.
dev = [
  "import-linter>=2.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[project.scripts]
aiw = "ai_workflows.cli:app"
aiw-mcp = "ai_workflows.mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["ai_workflows"]

# M13 Task 01 — force-include the repo-root ``migrations/`` directory
# in the wheel. ``packages = ["ai_workflows"]`` sweeps the source
# package only; ``yoyo-migrations`` reads migration scripts from an
# on-disk path, so a wheel without ``migrations/`` breaks first-run
# ``aiw`` / ``aiw-mcp`` on any ``uvx`` / ``uv tool install`` install.
# ``Path(__file__).parent.parent.parent / "migrations"`` in
# ``ai_workflows/primitives/storage.py`` resolves to
# ``site-packages/migrations/`` after install — mirroring the repo
# layout. Keep ``migrations/`` at repo root, not under
# ``ai_workflows/``, to preserve the four-layer contract.
[tool.hatch.build.targets.wheel.force-include]
"migrations" = "migrations"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "e2e: end-to-end test that hits a real API; only runs when AIW_E2E=1",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Spike artefacts are throwaway design-validation code. They live under
# scripts/spikes/ and are deleted with their task's findings (see M1
# Task 13). Excluding them from lint keeps stylistic debt from bleeding
# into ruff output for a file we plan to remove.
extend-exclude = ["scripts/spikes"]

[tool.ruff.lint]
# Sensible default rule set; tighten as the codebase grows.
select = ["E", "F", "I", "UP", "B", "SIM"]

# ``typer.Option`` / ``typer.Argument`` are the idiomatic way to declare
# CLI parameters in Typer. They look like mutable-default function calls
# to B008 but are evaluated once at import time and treated as markers,
# so they're safe. Same rationale applies to ``typer.Context``.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.importlinter]
root_package = "ai_workflows"

# Four-layer contract per architecture.md §3:
#   primitives → graph → workflows → surfaces (cli, mcp).
# Lower layers must never reach upward. M1 Task 12 replaces the
# pre-pivot 3-layer contracts (primitives / components / workflows)
# with this set; the old ``components/`` layer is collapsed into
# ``graph/``.

[[tool.importlinter.contracts]]
name = "primitives cannot import graph, workflows, or surfaces"
type = "forbidden"
source_modules = ["ai_workflows.primitives"]
forbidden_modules = [
    "ai_workflows.graph",
    "ai_workflows.workflows",
    "ai_workflows.cli",
    "ai_workflows.mcp",
]

[[tool.importlinter.contracts]]
name = "graph cannot import workflows or surfaces"
type = "forbidden"
source_modules = ["ai_workflows.graph"]
forbidden_modules = [
    "ai_workflows.workflows",
    "ai_workflows.cli",
    "ai_workflows.mcp",
]

[[tool.importlinter.contracts]]
name = "workflows cannot import surfaces"
type = "forbidden"
source_modules = ["ai_workflows.workflows"]
forbidden_modules = ["ai_workflows.cli", "ai_workflows.mcp"]

# M7 Task 01 adds a fourth contract: the eval harness may consume
# primitives + graph (needs validator / tiered-node adapters at M7
# Task 03 replay time) plus workflows (T03's replay runner imports
# the workflow module to pull out a node's built
# StateNodeSpec.runnable for single-node replay). The companion
# rule (graph cannot import evals) is policed in
# tests/evals/test_layer_contract.py — a one-shot AST check for
# `ai_workflows.evals` references under graph/.
#
# Amendment 2026-04-21 (T03 retrofit, M7-T01-ISS-03): T01 originally
# forbade `evals → workflows`. T03's replay runner genuinely requires
# that edge — the runner imports the workflow module to extract the
# node's `StateNodeSpec.runnable` and wire a single-node replay
# graph. The corrected architectural rule: `evals` is peer to the
# two surfaces (library of replay/capture helpers), not below
# workflows. Contract now restricts only `evals → {cli, mcp}`.
[[tool.importlinter.contracts]]
name = "evals cannot import surfaces"
type = "forbidden"
source_modules = ["ai_workflows.evals"]
forbidden_modules = [
    "ai_workflows.cli",
    "ai_workflows.mcp",
]
